--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -153,10 +153,10 @@
     {
      "data": {
       "text/plain": [
-       "'Max temp for each day:a,b,c'"
+       "'Max temp for each day: 16,11,15,13,11'"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
