Preserved time session formats

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,8 @@
     "        extractedTime = re.search('.+[SACH][^T]?',timeText)\n",
     "    \n",
     "        if extractedTime is not None:\n",
-    "            timeVal = reformattedTime(extractedTime.group(0))\n",
+    "#             timeVal = reformattedTime(extractedTime.group(0))\n",
+    "            timeVal = extractedTime.group()\n",
     "            eachTup.append(timeVal)\n",
     "      \n",
     "        tblData = rows[i].find_all('td')\n",
