fix hard-coded sliced string data

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -19,24 +19,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Retrieving: https://www.timeanddate.com/weather/australia/melbourne/historic?hd=20200818\n",
-      "<class 'int'>\n",
-      "Retrieving: https://www.timeanddate.com/weather/australia/melbourne/historic?hd=20200818\n",
-      "<class 'int'>\n",
-      "Retrieving: https://www.timeanddate.com/weather/australia/melbourne/historic?hd=20200819\n",
-      "<class 'int'>\n",
-      "Retrieving: https://www.timeanddate.com/weather/australia/melbourne/historic?hd=20200820\n",
-      "<class 'int'>\n",
-      "Retrieving: https://www.timeanddate.com/weather/australia/melbourne/historic?hd=20200821\n",
-      "<class 'int'>\n",
-      "Retrieving: https://www.timeanddate.com/weather/australia/melbourne/historic?hd=20200822\n"
+      "Retrieving: https://www.timeanddate.com/weather/australia/melbourne/historic?hd=20200818\n"
      ]
     }
    ],
@@ -115,10 +105,10 @@
     "      \n",
     "        tblData = rows[i].find_all('td')\n",
     "    \n",
-    "        temp = tblData[1].get_text().replace('\\xa0°C','')\n",
-    "        wind = tblData[3].get_text()[:2]\n",
-    "        humility = tblData[5].get_text()[:2]\n",
-    "        barometer = tblData[6].get_text()[:4]\n",
+    "        temp = tblData[1].get_text().replace('\\xa0°C','').strip()\n",
+    "        wind = tblData[3].get_text()[:2].strip()\n",
+    "        humility = tblData[5].get_text().replace('%',' ').strip()\n",
+    "        barometer = tblData[6].get_text()[:4].strip()\n",
     "    \n",
     "        eachTup.extend([temp,wind,humility,barometer])\n",
     "        eachRow.append(tuple(eachTup))\n",
@@ -131,6 +121,7 @@
     "weather_data = list()\n",
     "\n",
     "dateNum = 18\n",
+    "\n",
     "for i in range(0,5):\n",
     "    print(type(dateNum))\n",
     "    url = 'https://www.timeanddate.com/weather/australia/melbourne/historic?hd=202008' + str(dateNum)\n",
